--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap');
+
+html, body {
+  font-family: 'Mulish', sans-serif;
+}
